--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <script type="text/javascript" src="https://static.fusioncharts.com/code/latest/themes/fusioncharts.theme.fint.js"></script>
 
         <!-- Custom JS -->
-        <script type="text/javascript" src="/custom.js"></script>
-        
+        <script type="text/javascript" src="custom.js"></script>
+
     </body>
 </html>
