--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 
         <div id="chartContainer">FusionCharts XT will load here!</div>
 
+        <p id="message"></p>
+
         <!-- Include FusionCharts -->
         <script type="text/javascript" src="https://static.fusioncharts.com/code/latest/fusioncharts.js"></script>
         <script type="text/javascript" src="https://static.fusioncharts.com/code/latest/themes/fusioncharts.theme.fint.js"></script>
